syntax = "proto3";

package homepb;

import "google/api/annotations.proto";

message VerifyUserRequest{
    oneof verify_user{
    UserInfo info = 1 ; 
    bytes file_chunk = 2;
    }
}

message UserInfo{
    string access_token = 1;
    double lat  = 2;
    double lan = 3;
    string address = 4;
}

message VerifyUserResponse{
    string message = 1;
    int32 code = 2;
}

service VerifyService{
    rpc UserVerifyService (stream VerifyUserRequest) returns (VerifyUserResponse){
        option (google.api.http) = {
            post: "/v1/user/verify"
            body:"*"
		};
    };
}